# clickhouse-data-pipeline

./: .env.tmpl  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  seed.py
.github/workflows/: ci.yml
etl/: Dockerfile.etl  clickhouse_schema.sql  config.py  db.py  logging_config.py  main.py  requirements.txt  schema.py
etl/clickhouse/: schema.sql
etl/clickhouse_schema/: kpi_views.sql
etl/core/: __init__.py  config.py  db.py  pipeline.py  schema.py
scripts/: run_tests.sh  service.sh
seeder/: Dockerfile.periodic_seeder  Dockerfile.seeder  periodic_seed.py  scripts.py
stream_etl/: Dockerfile.streametl  main.py  requirements.txt
stream_etl/core/: config.py  consumer.py  processor.py
stream_etl/utils/: logging_config.py
tests/: test_etl.py  test_integration.py  test_schema.py  test_stream_etl.py
