[project]
name = "data-task"
version = "0.1.0"
description = "RMT Data Engineering Task"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "clickhouse-driver==0.2.9",
    "psycopg[binary]>=3.2.6",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
