[project]
name = "data-task"
version = "0.1.0"
description = "RMT Data Engineering Task"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "clickhouse-driver==0.2.9",
    "kafka-python>=2.2.0",
    "psycopg[binary]>=3.2.6",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: mark test as a unit test",
    "integration: mark test as an integration test",
    "schema: mark test as a schema test",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
